<resources>
    <string name="app_name">App-Soft_Drink_Recipes</string>
    <string name="make_a_nice_drink_for_the_family">Make a nice drink for the Family</string>
    <string name="get_started">Get Started</string>
    <string name="cocktail">CockTail</string>
    <string name="cocoa">Cocoa</string>
    <string name="shakes">Shakes</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="recipe_for_varieties_of_drinks">Recipe For Varieties Of Drinks</string>
</resources>