<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllRecipeActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/introText"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="10dp"
                android:textStyle="bold"

                android:text="@string/recipe_for_varieties_of_drinks"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/introText"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color"

            android:text="@string/soft_drink"
            android:textAllCaps="false" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color"

            android:text="@string/shakes"
            android:textAllCaps="false" />

        <Space
            android:layout_width="5dp"

            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color"
            android:text="@string/cocoa"
            android:textAllCaps="false" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color"
            android:text="@string/cocktail"
            android:textAllCaps="false" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/buttonsViews"
        android:layout_height="wrap_content">
        <GridView
            android:layout_width="match_parent"
            android:id="@+id/gridView"
            android:numColumns="2"
            android:layout_height="match_parent"/>
    </LinearLayout>


</RelativeLayout>